add_executable(thread_test Thread_test.cc)
target_link_libraries(thread_test muduo_base)

add_executable(mutex_test Mutex_test.cc)
target_link_libraries(mutex_test muduo_base)

add_executable(gzipfile_test GzipFile_test.cc)
target_link_libraries(gzipfile_test muduo_base z)

add_executable(timestamp_test Timestamp_unittest.cc)
target_link_libraries(timestamp_test muduo_base)

add_executable(blockingqueue_bench BlockingQueue_bench.cc)
target_link_libraries(blockingqueue_bench muduo_base)

add_executable(blockingqueue_bench2 BlockingQueue_bench2.cc)
target_link_libraries(blockingqueue_bench2 muduo_base)

add_executable(blockingqueue_test BlockingQueue_test.cc)
target_link_libraries(blockingqueue_test muduo_base)

add_executable(boundedblockingqueue_test BoundedBlockingQueue_test.cc)
target_link_libraries(boundedblockingqueue_test muduo_base)

add_executable(data_unittest Date_unittest.cc)
target_link_libraries(data_unittest muduo_base)

add_executable(exception_test Exception_test.cc)
target_link_libraries(exception_test muduo_base)